tests/tests/snapshots/golden__ir__typed-video.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "Media",
  "multi_service": false,
  "services": [
    {
      "id": 0,
      "name": "Media"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Auth",
      "name": "default",
      "scheme": "Jwt",
      "issuer": null,
      "audience": null
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 2,
      "service": 0,
      "kind": "Cache",
      "name": "default",
      "engine": "Redis"
    },
    {
      "id": 3,
      "service": 0,
      "kind": "Queue",
      "name": "default",
      "engine": "Nats"
    },
    {
      "id": 4,
      "service": null,
      "kind": "Stream",
      "name": "Uploaded",
      "subject": "media.uploaded",
      "record": 0
    },
    {
      "id": 5,
      "service": null,
      "kind": "Stream",
      "name": "Transcoded",
      "subject": "media.transcoded",
      "record": 0
    },
    {
      "id": 6,
      "service": 0,
      "kind": "Api",
      "name": "Upload",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 7,
      "service": 0,
      "kind": "Worker",
      "name": "Transcoder",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 8,
      "service": 0,
      "kind": "Worker",
      "name": "Notifier",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 9,
      "service": 0,
      "kind": "Api",
      "name": "Clip",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 10,
      "service": 0,
      "kind": "Service",
      "name": "ClipStore",
      "signature": null
    },
    {
      "id": 11,
      "service": 0,
      "kind": "Service",
      "name": "StoreVideo",
      "signature": {
        "params": [
          [
            "v",
            {
              "Record": 0
            }
          ]
        ],
        "return_ty": {
          "Record": 0
        },
        "locals": [
          {
            "Record": 0
          },
          {
            "Record": 0
          }
        ],
        "body": [
          {
            "Let": {
              "slot": 1,
              "value": {
                "RecordCons": {
                  "record": 0,
                  "base_value": {
                    "Local": {
                      "slot": 0,
                      "ty": {
                        "Record": 0
                      }
                    }
                  },
                  "fields": [
                    [
                      "status",
                      {
                        "EnumLit": {
                          "variants": [
                            "Pending",
                            "Ready",
                            "Failed"
                          ],
                          "variant": "Pending"
                        }
                      }
                    ]
                  ]
                }
              }
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 1,
                "ty": {
                  "Record": 0
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 12,
      "service": 0,
      "kind": "Service",
      "name": "Transcode",
      "signature": null
    },
    {
      "id": 13,
      "service": 0,
      "kind": "Service",
      "name": "Notify",
      "signature": null
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 4,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 1,
      "from": 5,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 2,
      "from": 4,
      "to": 7,
      "kind": "AsyncMessage"
    },
    {
      "id": 3,
      "from": 5,
      "to": 8,
      "kind": "AsyncMessage"
    },
    {
      "id": 4,
      "from": 9,
      "to": 0,
      "kind": "RequestFlow"
    },
    {
      "id": 5,
      "from": 0,
      "to": 10,
      "kind": "RequestFlow"
    },
    {
      "id": 6,
      "from": 10,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 7,
      "from": 10,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 8,
      "from": 6,
      "to": 0,
      "kind": "RequestFlow"
    },
    {
      "id": 9,
      "from": 0,
      "to": 11,
      "kind": "RequestFlow"
    },
    {
      "id": 10,
      "from": 11,
      "to": 4,
      "kind": "AsyncMessage"
    },
    {
      "id": 11,
      "from": 12,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 12,
      "from": 12,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 13,
      "from": 7,
      "to": 12,
      "kind": "RequestFlow"
    },
    {
      "id": 14,
      "from": 12,
      "to": 5,
      "kind": "AsyncMessage"
    },
    {
      "id": 15,
      "from": 13,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 16,
      "from": 13,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 17,
      "from": 8,
      "to": 13,
      "kind": "RequestFlow"
    }
  ],
  "records": [
    {
      "name": "Video",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "title",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "duration_s",
          "ty": {
            "type": "Int"
          }
        },
        {
          "name": "status",
          "ty": {
            "type": "Enum",
            "variants": [
              "Pending",
              "Ready",
              "Failed"
            ]
          }
        }
      ],
      "kind": "Data"
    }
  ],
  "tables": [],
  "pipelines": [
    {
      "name": "Upload",
      "service": 0,
      "owner": 6,
      "payload": 0,
      "steps": [
        {
          "step": "Auth",
          "node": 0
        },
        {
          "step": "Handler",
          "node": 11
        },
        {
          "step": "Publish",
          "stream": 4
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Transcoder",
      "service": 0,
      "owner": 7,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 12
        },
        {
          "step": "Publish",
          "stream": 5
        }
      ]
    },
    {
      "name": "Notifier",
      "service": 0,
      "owner": 8,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 13
        }
      ]
    }
  ],
  "resources": [
    {
      "name": "Clip",
      "service_owner": 0,
      "api": 9,
      "service": 10,
      "database": 1,
      "cache": 2,
      "auth": 0,
      "record": 0,
      "config": {
        "cache_ttl": 300,
        "page_size": 100
      }
    }
  ],
  "event_streams": []
}
